--- a/SPE-website/user/templates/user/signin.html
+++ b/SPE-website/user/templates/user/signin.html
@@ -9,49 +9,147 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'user/common-styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'user/login/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'user/login/landing.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'user/login/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'user/login/style.css' %}">
+    <script src="{% static 'user/login/jquery.min.js' %}"></script>    
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
+
+
     <!-- CSS -->
 
 </head>
 
 <body>
 
-    <div class="content-section mx-auto d-block">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
+    
 
-                <!-- SPE logo -->
-                <img id='spe-logo' class="mx-auto d-block" src="https://upload.wikimedia.org/wikipedia/commons/e/e1/SPE_Logo_Clear_Bright.png">
-                <!-- SPE logo -->
 
-                <!-- Horizontal Divider -->
-                <hr class="accent-2 mb-4 mt-0 d-block mx-auto">
-                <!-- Horizontal Divider -->
 
-                {{ form|crispy }}
-            </fieldset>
+    <script src="/stylesheet/jquery-3.5.1.min.js"></script>
+    <div id="landing-header">
+      <!-- <h1>Welcome to SPE IIT ISM DHANBAD</h1>
+     <a href="/blogs" class="btn btn-lg btn-primary">Let's Get Started</a> -->
 
-            <!-- Sign Up Button -->
-            <div class="form-group">
-                <button  id="SignInBtn" type="submit" class="btn btn-outline-primary waves-effect d-block mx-auto">
-                    Sign In</button>
+
+
+
+<div class="container register">
+                <div class="row">
+                    <div class="col-md-3 register-left">
+                        <img src="Spe new.png" alt="SPE IMAGE HERE"/>
+                        <h3>SPE IIT ISM</h3>
+                        <p>You are few steps away from entering our SPE Chapter</p>
+                        <input type="submit" name="" value="Know More"/><br/>
+                    </div>
+                    <div class="col-md-9 register-right">
+                        <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#register" role="tab" aria-controls="home" aria-selected="true">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#login" role="tab" aria-controls="profile" aria-selected="false">Login</a>
+                            </li>                    
+                        </ul>
+                        <div class="tab-content" id="myTabContent">
+                            <div class="tab-pane fade show active" id="register" role="tabpanel" aria-labelledby="home-tab">
+                                <h3 class="register-heading">Register With SPE IIT ISM</h3>
+                                <div class="row register-form">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="First Name *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Last Name *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="password" class="form-control" placeholder="Password *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="password" class="form-control"  placeholder="Confirm Password *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="maxl">
+                                                <label class="radio inline"> 
+                                                    <input type="radio" name="gender" value="ism" checked>
+                                                    <span> From IIT ISM </span> 
+                                                </label>
+                                                <label class="radio inline"> 
+                                                    <input type="radio" name="gender" value="nonism">
+                                                    <span>Non IIT ISM </span> 
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input type="email" class="form-control" placeholder="Your Email *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control" placeholder="Your Phone *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <select class="form-control">
+                                                <option class="hidden"  selected disabled>Please select your Sequrity Question</option>
+                                                <option>What is your Birthdate?</option>
+                                                <option>What is Your old Phone Number</option>
+                                                <option>What is your Pet Name?</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
+                                        </div>
+                                        <input type="submit" class="btnRegister"  value="Register"/>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+
+
+                            <div class="tab-pane fade " id="login" role="tabpanel" aria-labelledby="home-tab" >
+                                <h3 class="register-heading">Login</h3>
+                                
+                                <div class="text-center register-form">
+                                    <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="UserName" value="" />
+                                    </div>                                       
+                                    <div class="form-group">
+                                            <input type="password" class="form-control" placeholder="Password" value="" />
+                                    </div>
+                                    <input type="submit" class="btnRegister"  value="Login"/>                                    
+                                </div>
+                            </div>
+
+
+
+
+
+
+                        </div>
+                    </div>
+                </div>
+
             </div>
-            <!-- Sign Up Button -->
 
-        </form>
 
-        <!-- Horizontal Divider -->
-        <hr class="accent-2 mb-4 mt-0 d-block mx-auto">
-        <!-- Horizontal Divider -->
 
-        <!-- Sign Up Link -->
-        <a id="SignUpAnchor" href="{% url 'signup-page' %}">
-            <button type="submit" id="SignUpBtn" class="btn btn-outline-primary waves-effect d-block mx-auto">
-                Create a new account</button>
-        </a>
-        <!-- Sign Up Link -->
-
-    </div>
-
+     </div>
+     <!-- <div id="landing-header jumbotron">
+      <h1>Welcome to SPE IIT ISM DHANBAD</h1>
+     <a href="/blogs" class="btn btn-lg btn-primary">Let's Get Started</a>
+     </div>
+ -->
+     <ul class="slideshow">
+       <li></li>
+       <li></li>
+       <li></li>
+       <li></li>
+       <li></li>
+     </ul>
+ 
 </body>
