Overflow issue resolved

--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -147,7 +147,7 @@
     <footer>
         <div class="footer-top">
             <div class="container-fluid">
-                <div class="row">
+                <div class="row" style="overflow: hidden">
                     <div class="col-md-3 footer-about" data-aos="fade-up-right" data-aos-duration="1500">
                         <img src="https://cdn.asp.events/CLIENT_SPE__29FE44FF_5056_B733_49EC4D60A02A6A7D/sites/Asia-Pacific-Oil-Gas-2020/media/logos/SPE_Logo_2.png" alt="logo-footer">
                         <!-- <p>
