--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -191,9 +191,9 @@
                     </div>
                     <div class="col-md-6 footer-social">
                         <p style="display: inline;">Follow us on : </p>
-                        <a href="https://www.facebook.com/speismsc/"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/spe_iitism/"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/company/spe-iit-ism-sc/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/speismsc/" style="color:white"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/spe_iitism/" style="color:white"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/spe-iit-ism-sc/" style="color: white;"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
