attached register link to google doc, added markdown to event detail page

--- a/SPE-website/events/templates/events/events_detail.html
+++ b/SPE-website/events/templates/events/events_detail.html
@@ -1,4 +1,5 @@
 {% extends "pages/base.html" %}
+{% load markdown_extras %}
 {% load static %}
 
     <!-- Adding stylesheet to base template -->
@@ -15,11 +16,12 @@
                 <p> </p>
                 <h1 class="article-title">{{ object.title }}</h1>
                 <hr>
+                {%if object.image%}
                 <img style="width: 80%;" src ="{{ object.image.url }}">
-
-                <p class="article-content">{{ object.content }}</p>
+                {%endif%}
+                <p class="article-content">{{ object.content| markdown |safe }}</p>
                 <p> Last date to register : {{ object.reg_date|date:"M j, Y"}} </p>
-                <a class="btn btn-info mb-4" href="#">Register now!</a>
+                <a class="btn btn-info mb-4" href="{{ object.google_doc_url }}">Register now!</a>
             </div>
         </div>
         <!-- Post Body -->
