--- a/SPE-website/events/templates/events/home.html
+++ b/SPE-website/events/templates/events/home.html
@@ -21,7 +21,7 @@
             <hr>
             <p class="article-content">{{ event.description }}</p>
             <p class="article-content">Last date to register: {{ event.reg_date }}</p>
-            <a class="btn btn-info mb-4" href="#">Register now!</a>
+            <a class="btn btn-info mb-4" href="{{event.google_doc_url}}">Register now!</a>
         </article>
     {% endfor %}
     <!-- Blog Post body -->
