--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -52,7 +52,7 @@
                             <a href="#" class="dropdown-item">Fact Friday</a>
                         </div>
                     </li>
-                    <li><a href="#" class="nav-item nav-link">Events</a></li>
+                    <li><a href="{% url 'events-home' %}" class="nav-item nav-link">Events</a></li>
                     <li><a href="#" class="nav-item nav-link">Gallery</a></li>
                     <li><a href="#" class="nav-item nav-link">Contact</a></li>
                     {% if user.is_authenticated %}
