--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -1,5 +1,5 @@
 {% extends 'pages/base.html' %} {% block content %}
-<div class="container" style="padding-top:100px;">
+<div class="container">
     <h1>Hello SPE!!!</h1>
     <ul>
         <li>SPE</li>
