--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -54,7 +54,13 @@
 
                         </div>
                     </li>
-                    <li><a href="{% url 'events-home' %}" class="nav-item nav-link">Events</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="nav-item nav-link" data-toggle="dropdown">Events</a>
+                        <div class="dropdown-menu">
+                            <a href="{% url 'events-home' %}" class="dropdown-item">Upcomming</a>
+                            <a href="{% url 'events-past' %}" class="dropdown-item">Past</a>
+                        </div>
+                    </li>
                     <li><a href="#" class="nav-item nav-link">Gallery</a></li>
                     <li><a href="#" class="nav-item nav-link">Contact</a></li>
                     {% if user.is_authenticated %}
