--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -57,7 +57,7 @@
                     <li class="dropdown">
                         <a href="#" class="nav-item nav-link" data-toggle="dropdown">Events</a>
                         <div class="dropdown-menu">
-                            <a href="{% url 'events-home' %}" class="dropdown-item">Upcomming</a>
+                            <a href="{% url 'events-home' %}" class="dropdown-item">Upcoming</a>
                             <a href="{% url 'events-past' %}" class="dropdown-item">Past</a>
                         </div>
                     </li>
