styled blog page and added about page template

--- a/SPE-website/blog/templates/blog/home.html
+++ b/SPE-website/blog/templates/blog/home.html
@@ -5,10 +5,9 @@
     {% block content-blog %}
         <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="{% static 'blog/blog-main.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'blog/blog-body.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'blog/post-body.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'blog/button-group.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}">
     {% endblock content-blog %}
     <!-- Adding stylesheet to base template -->
 
