--- a/SPE-website/blog/templates/blog/user_posts.html
+++ b/SPE-website/blog/templates/blog/user_posts.html
@@ -3,7 +3,7 @@
 
     <!-- Adding stylesheet to base template -->
     {% block content-blog %}
-        <link rel="stylesheet" type="text/css" href="{% static 'blog/blog-main.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'blog/blog-body.css' %}">
     {% endblock content-blog %}
     <!-- Adding stylesheet to base template -->
 
