--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -43,7 +43,7 @@
             <div id="main-nav" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li><a href="{% url 'homepage' %}" class="nav-item nav-link active">Home</a></li>
-                    <li><a href="#" class="nav-item nav-link">About Us</a></li>
+                    <li><a href="{% url 'about-page' %}" class="nav-item nav-link">About Us</a></li>
                     <li class="dropdown">
                         <a href="{% url 'blog-home' %}" class="nav-item nav-link" data-toggle="dropdown">Resources</a>
                         <div class="dropdown-menu">
