--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -1,4 +1,5 @@
-{% extends 'pages/base.html' %} {% block content %}
+{% extends 'pages/base.html' %}
+{% block content %}
 <div class="container">
     <h1>Hello SPE!!!</h1>
     <ul>
