--- a/SPE-website/user/templates/user/signin.html
+++ b/SPE-website/user/templates/user/signin.html
@@ -35,7 +35,7 @@
             <!-- Sign Up Button -->
             <div class="form-group">
                 <button type="submit" id="SignUpBtn" class="btn btn-outline-primary waves-effect"
-                style="margin-top: 0px;">Sign Up</button>
+                style="margin-top: 0px;">Sign In</button>
             </div>
             <!-- Sign Up Button -->
 
