--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -2,23 +2,62 @@
 <link rel="stylesheet" type="text/css" href="{% static 'pages/about.css' %}"> {% endblock content-blog %} {% block content %}
 <div class="hero-image" style="margin-top: -14px; overflow: hidden;">
     <div class="hero-text">
-        <h1 style="font-size:50px">About us</h1>
+        <h1 style="font-size:50px; font-family: 'Carter One', cursive; font-size: 80px;" data-aos="fade-down" data-aos-duration="3000">About us</h1>
     </div>
-    <span class="container" style="height: 24px; width: 24px; position: relative; left: 50%; top: 60%;">
+    <a href="#" id="downBtn">
+        <span class="container" style="height: 24px; width: 24px; position: relative; left: 50%; top: 60%;">
         <div class="chevron"></div>
         <div class="chevron"></div>
         <div class="chevron"></div>
         <!-- <a class="down" href="#">Scroll down</a> -->
     </span>
+    </a>
 </div>
 
+<div class="container">
+    <div class="typewriter-text1">Who we are?</div>
+</div>
+
+<div class="container-fluid" style="padding: 3% 4%;" data-aos="zoom-in-up" data-aos-duration="1000">
+    <div class="row">
+        <div class="col-6" style="width: 100%; height: 500px; overflow: hidden;">
+            <img src="https://asxreport.files.wordpress.com/2018/03/7b00bf2faf-f82c-4d2b-898e-ed8ec00ebbd17drefinery20image20oilgas.jpg" style="height:100%;">
+        </div>
+        <div class="col-6" style="color: white; font-family: 'Roboto', sans-serif; line-height: 2;font-size: 1.8rem; font-weight:300; padding: 3% 2%;">
+            <p>Since 1984, SPE ISM STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the country
+                to be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level. Its been all possible because of its strong commitment of helping students learn more
+                about the industry through offering the opportunity to network with company spokespeople, nurturing the exchange of ideas with others, and intensifying their knowledge through a plethora of educational and tech events throughout the year.
+                Till date, it's in constant engagement with the students to make them global citizens by fostering the leadership as well as the management skills.
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="typewriter-text2">Aim of the Chapter</div>
+</div>
+
+<!-- 
+<div class="letter">
+    <p>Dear Friends,</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod porta tempor. Donec pulvinar turpis nec velit pellentesque quis rhoncus sapien facilisis. Mauris quis massa dui, rhoncus viverra quam. Nulla tempus, augue ut consectetur facilisis,
+        arcu elit pellentesque arcu, sed rutrum orci turpis pulvinar augue. Donec eget arcu mauris. Vestibulum tristique consequat lacus eget laoreet. Integer sed nisl sed nibh pulvinar ornare quis nec quam. Aenean rhoncus ligula ut lectus placerat a
+        commodo quam vulputate. In eu metus turpis.</p>
+    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus facilisis erat in nibh auctor at aliquet velit vestibulum. Curabitur turpis diam, malesuada eu consequat eget, ultricies sed nunc. Aenean sed odio massa.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare vulputate congue. Quisque leo metus, condimentum nec molestie et, egestas luctus libero.</p>
+    <p>Mauris porta odio augue. Nam turpis dui, volutpat id feugiat vitae, sagittis a justo. Nam iaculis aliquet erat non varius. Suspendisse justo arcu, tincidunt sed auctor sit amet, fermentum id turpis. Suspendisse sed enim quis lorem vestibulum fermentum
+        a ut nulla.</p>
+    <p>Nullam tincidunt elit quis nibh blandit interdum. Duis ullamcorper pellentesque pretium. Nulla facilisi. Morbi semper nisi et justo varius non fermentum metus ornare. Proin vehicula, mi vel volutpat accumsan, libero lacus euismod massa, id feugiat
+        velit enim nec ligula. Aliquam ipsum est, volutpat aliquam tincidunt id, sagittis et velit. Nunc vitae massa vel dui facilisis consectetur vel id sem.</p>
+
+    <p>Aenean pulvinar, lacus ultrices euismod viverra, nulla diam interdum ligula, id mollis mi erat quis lectus. Morbi quis felis ut turpis condimentum dictum porttitor id mauris. Nam non tincidunt mauris. Donec viverra eleifend pharetra. Nulla eu ipsum
+        et elit consectetur rutrum. Integer lorem purus, ultricies ac laoreet quis, feugiat vel dolor. Donec eu turpis neque. Nullam molestie sapien eu nibh semper sed convallis est pretium.</p>
+</div>
+ -->
+
 <script>
-    $(document).ready(function() {
-        $(".down").click(function() {
-            $('html, body').animate({
-                scrollTop: $(".up").offset().top
-            }, 1500);
-        });
+    $("#downBtn").click(function() {
+        $('#textBody').scrollTop($('#textBody').scrollTop() + 20);;
     });
 </script>
 {% endblock content %}
