--- a/SPE-website/blog/templates/blog/user_posts.html
+++ b/SPE-website/blog/templates/blog/user_posts.html
@@ -1,67 +1,80 @@
 {% extends "pages/base.html" %}
-{%load static%}
+{% load static %}
 
     <!-- Adding stylesheet to base template -->
     {% block content-blog %}
+        <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{% static 'blog/blog-body.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'blog/post-styles.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'blog/post-body.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'blog/button-group.css' %}">
     {% endblock content-blog %}
     <!-- Adding stylesheet to base template -->
 
     {% block content%}
 
-        <div class="col-md-8" style="padding-left: 5%;">
+        <div class="d-block mx-auto">
 
             <!-- Heading for this page -->
-            <h1 class = "mb-3">Blogs by {{view.kwargs.username}}    ({{page_obj.paginator.count}})</h1>
+            <h1 class="mb-3 d-flex justify-content-center" id="UserBlogTitle">
+                Blogs by {{ view.kwargs.username }}    ({{ page_obj.paginator.count }})
+            </h1>
             <!-- Heading for this page -->
 
-            <hr>
+            <hr class="d-flex justify-content-center" id="UserPostTitleUnderline">
 
             <!-- Blog Post Body -->
+            <div id="PostContainer">
             {% for post in posts %}
-                <article class="media content-section">
-                    <div class="media-body">
-
-                        <div class="article-metadata">
-                            <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
-                            <small class="text-muted">{{ post.date_posted|date:"M j, Y"}}</small>
+                    <div id="PostBody" class="media content-section">
+                        <div class="media-body">
+                            <img id="PostImage" src="{{ post.image.url }}">
+                            <h1 id="ArticleTitle">{{ post.title }}</h1>
+                            <div id="ArticleMetaData">
+                                <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
+                                <small class="text-muted">{{ post.date_posted|date:"M j, Y"}}</small>
+                                <hr id="Underline" align="left">
+                            </div>
+                            <p class="article-content">{{ post.overview }}</p>
+                            <a href="{% url 'post-detail' post.id %}">
+                                <button type="button" class="btn btn-primary">Read More</button>
+                            </a>
                         </div>
-
-                        <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-
-                        <p class="article-content">{{ post.content }}</p>
-
                     </div>
-                </article>
             {% endfor %}
+            </div>
             <!-- Blog Post Body -->
 
             <!-- Next/Previous Buttons -->
-            <div style="text-align:center;">
+            <div class="d-flex justify-content-center">
                 {% if is_paginated %}
 
                     {% if page_obj.has_previous %}
-                        <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-                        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                        <a class="btn btn-grp mb-4" href="?page={{ page_obj.previous_page_number }}">
+                            <span class="material-icons">arrow_back_ios</span>
+                        </a>
                     {% endif %}
 
                     {% for num in page_obj.paginator.page_range %}
                         {% if page_obj.number == num %}
-                            <a class="btn btn-info mb-4" href="?page={{ num }}">{{num}}</a>
+                            <a class="btn btn-grp mb-4" href="?page={{ num }}">{{num}}</a>
                         {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
-                            <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{num}}</a>
+                            <a class="btn btn-grp mb-4" href="?page={{ num }}">{{num}}</a>
                         {% endif %}
                     {% endfor %}
 
                     {% if page_obj.has_next %}
-                        <a class="btn btn-outline-info mb-4" href="?page={{page_obj.next_page_number}}">Next</a>
-                        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+                        <a class="btn btn-grp mb-4" href="?page={{page_obj.next_page_number}}">
+                            <span class="material-icons">arrow_forward_ios</span>
+                        </a>
                     {% endif %}
 
                 {% endif %}
+                </div>
             </div>
             <!-- Next/Previous Buttons -->
 
-        </div>
+
 
     {% endblock content %}
